# webapp_classes

./: Dockerfile  Makefile  README.md  endpointWrappingClasses.py  pyproject.toml  randomDogWrapper.py  randomPublicAPIWrapper.py
src/webappclasses/: randomDogWrapper.py  randomPublicAPIWrapper.py
