[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webappclasses"
version = "0.0.1"
authors = [
  { name="Yashar Honarmandi", email="yashar.honarmandi@entecon.se" },
]
description = "Various classes developed for my webapp."
readme = "README.md"
dependencies = [
    "requests >= 2.28.2 "
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yasharhon/webapp_classes"
"Bug Tracker" = "https://github.com/yasharhon/webapp_classes/issues"